NetBSD Problem Report #10000

Received: (qmail 16504 invoked from network); 28 Apr 2000 01:28:41 -0000
Message-Id: <200004280127.VAA07487@lop-nor.ihack.net>
Date: Thu, 27 Apr 2000 21:27:20 -0400 (EDT)
From: root@ihack.net
Reply-To: mycroft@netbsd.org
To: gnats-bugs@gnats.netbsd.org
Subject: vga driver loses on Cyrix/NatSemi GXLV
X-Send-Pr-Version: 3.95

>Number:         10000
>Category:       port-i386
>Synopsis:       vga driver loses on Cyrix/NatSemi GXLV
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    port-i386-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Apr 28 01:29:00 +0000 2000
>Closed-Date:    Tue Nov 09 21:52:34 +0000 2010
>Last-Modified:  Tue Nov 09 21:52:34 +0000 2010
>Originator:     Charles M. Hannum
>Release:        -current
>Organization:
	Internetwork Hacker
>Environment:
	Cyrix GXLV + CS5530 system

>Description:
	The text mode emulation in the GXLV processor is not sufficient for
	use with the `fast scrolling' code in the vga driver.  Scrolling the
	display causes the display to be trashed in various hard-to-describe
	ways.

>How-To-Repeat:
	Boot on a GXLV system.

>Fix:
	Disable `fast scrolling' on the GXLV.
>Release-Note:
>Audit-Trail:
From: Sergey Svishchev <svs@ropnet.ru>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: port-i386/10000
Date: Fri, 5 Nov 2010 02:01:16 +0300

 This should work, I guess:

 --- sys/dev/pci/vga_pci.c	24 Feb 2010 22:38:01 -0000	1.49
 +++ sys/dev/pci/vga_pci.c	4 Nov 2010 23:00:05 -0000
 @@ -109,6 +109,8 @@
   } vga_pci_quirks[] = {
   	{PCI_ID_CODE(PCI_VENDOR_SILMOTION, PCI_PRODUCT_SILMOTION_SM712),
   	 VGA_QUIRK_NOFASTSCROLL},
 +	{PCI_ID_CODE(PCI_VENDOR_CYRIX, PCI_PRODUCT_CX5530_VIDEO),
 +	 VGA_QUIRK_NOFASTSCROLL},
   };

   static const struct {

From: "Sergey Svishchev" <shattered@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/10000 CVS commit: src/sys/dev/pci
Date: Tue, 9 Nov 2010 21:12:20 +0000

 Module Name:	src
 Committed By:	shattered
 Date:		Tue Nov  9 21:12:19 UTC 2010

 Modified Files:
 	src/sys/dev/pci: vga_pci.c

 Log Message:
 PR/10000: disable fast scrolling on Cyrix GXLV (CS5530 chipset)

 OK by wiz@


 To generate a diff of this commit:
 cvs rdiff -u -r1.49 -r1.50 src/sys/dev/pci/vga_pci.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: shattered@NetBSD.org
State-Changed-When: Tue, 09 Nov 2010 21:52:34 +0000
State-Changed-Why:
Fix committed.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.