PR/10000: disable fast scrolling on Cyrix GXLV (CS5530 chipset)

OK by wiz@